syntax = "proto3";

service SqlServicePbxService {
  rpc ExecuteSql(SqlRequest) returns (SqlResponse);
}

message SqlRequest {
  string query = 1;
}

message SqlResponse {
  string result = 1;
  string error = 2;
}